tests/kyverno-native/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: prepend-cluster-app-config-map-test
policies:
  - ../../policies/ux/prepend-cluster-app-config-map.yaml
  - ../../policies/ux/sync-cluster-app-configmap-to-org-namespaces.yaml
resources:
  - prepend-cluster-app-config-map/app-pre.yaml
  - sync-cluster-app-configmap-to-org-namespaces/resources.yaml
results:
  # BUG: using any part of `mutate.target` in the ClusterPolicy makes this fail
  # For now, this test has to be run manually. To run it, first comment out
  # the section in the policy file that is responsible for injecting
  # into existing resources (the commented section), then uncomment the
  # block below.
  - policy: prepend-cluster-app-config-map
    rule: check-and-add-cluster-app-config
    resources:
      - org-piontec/hello-world-app
    kind: App
    patchedResources: prepend-cluster-app-config-map/app-post.yaml
    result: pass
  - policy: prepend-cluster-app-config-map
    rule: check-and-add-cluster-app-config
    resources:
      - org-piontec/hello-world-app2
    kind: App
    result: skip
  - policy: sync-cluster-app-configmap-to-org-namespaces
    rule: sync-configmap-to-org-namespaces
    resources:
      - org-default
    kind: Namespace
    generatedResource: sync-cluster-app-configmap-to-org-namespaces/configmap-generated.yaml
    result: pass
